Fix Anitele's issue where the <nav> overlapped the <footer>

--- a/anitv_enhancer.user.css
+++ b/anitv_enhancer.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Anitv Enhancer (style)
 @namespace      github.com/U-cauda-elongata
-@version        0.2.0
+@version        0.2.1
 @updateURL      https://raw.githubusercontent.com/U-cauda-elongata/anitv-enhancer/master/anitv_enhancer.user.css
 @description    YouTube-like keyboard shortcuts and theater mode for Anitele.
 @license        CC-BY-NC-SA-4.0
@@ -97,5 +97,10 @@ url-prefix("https://ch.ani.tv/live-broadcasts/")
 
     .media-toggle-sp {
         display: none !important;
+    }
+
+    footer {
+        margin-left: 218px;
+        width: unset;
     }
 }
